--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,12 @@
-  spring:
-    data:
-      mongodb:
-        host: localhost
-        port: 27017
-        database: test-db
-        username: root
-        password: root
+spring:
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: test-db
+
+logging:
+    level:
+      org.springframework.data.mongodb.core.ReactiveMongoTemplate: DEBUG
+      org.springframework.data.mongodb.core.MongoTemplate: DEBUG
 
